페이지네이션 통한 댓글 더보기 기능

--- a/hobbycoding/templates/_pagination.html
+++ b/hobbycoding/templates/_pagination.html
@@ -1,7 +1,7 @@
 <div class="pagination">
     <span class="step-links">
         {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            <a class="previous-page" href="?page={{ page_obj.previous_page_number }}">previous</a>
         {% endif %}
 
         <span class="current">
@@ -9,7 +9,7 @@
         </span>
 
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a class="next-page" href="?page={{ page_obj.next_page_number }}">next</a>
         {% endif %}
     </span>
 </div>
