--- a/comment/templates/_comment_list.html
+++ b/comment/templates/_comment_list.html
@@ -7,15 +7,18 @@
     </ul>
     <input type="submit" value="submit" />
 </form>
-{% for comment in comment_list %}
-    <div class="comment">
-        <div class="date">{{ comment.created_date }}</div>
-        <img class="avatar" src="{{ comment.author.avatar.url }}"/>
-        <strong>{{ comment.author }}</strong>
-        <strong>{{ comment.author.nickname }}</strong>
-        <p>{{ comment.text|linebreaks }}</p>
-    </div>
-{% empty %}
-    <p>리뷰가 없습니다</p>
-{% endfor %}
+<div class="comment-list">
+    {% for comment in comment_list %}
+        <div class="comment">
+            <div class="date">{{ comment.created_date }}</div>
+            <img class="avatar" src="{{ comment.author.avatar.url }}"/>
+            <strong>{{ comment.author }}</strong>
+            <strong>{{ comment.author.nickname }}</strong>
+            <p>{{ comment.text|linebreaks }}</p>
+        </div>
+    {% empty %}
+        <p>리뷰가 없습니다</p>
+    {% endfor %}
+</div>
+<button class="comment-more" data-pagination="">댓글 더보기</button>
 {% include '_pagination.html' %}
