--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% load taggit_templatetags2_tags %}
+{% block header-title %}Meetups{% endblock %}
 {% block content %}
-    <h1>밋업 리스트</h1>
     <div class="row">
         <div class="col s12">
             <form action="" method="get">
