--- a/hobbycoding/static/less/base.less
+++ b/hobbycoding/static/less/base.less
@@ -4,6 +4,14 @@
 @import (once) "home.less";
 
 nav.nav-main {
+  box-shadow: none;
+
+  #logo-container {
+    img {
+      width: 160px;
+      margin-top: 7px;
+    }
+  }
   ul#nav-top {
     li.user-info {
       img {
@@ -16,6 +24,20 @@ nav.nav-main {
       img {
         width: 30px;
       }
+    }
+  }
+
+  //네비게이션 흑화 버전
+  &.nav-dark {
+    a, ul a {
+      color : @font-primary;
+    }
+  }
+
+  //네비게이션 천사 버전
+  &.nav-light {
+    a, ul a {
+      color : white;
     }
   }
 }
