--- a/hobbycoding/static/less/var.less
+++ b/hobbycoding/static/less/var.less
@@ -5,8 +5,9 @@
 @mid-gray: #ABABAB;
 @warning: #F16060;
 
-@font-primary: #6f6c66;
-@font-secondary: #92889C;
+@font-primary: #404040;
+@font-secondary: #6f6c66;
+@font-tertiary: #92889C;
 @hover-primary: #9b7bba; // button hover
 
 @background-color: #f3ede8;
