--- a/hobbycoding/templates/base.html
+++ b/hobbycoding/templates/base.html
@@ -101,7 +101,7 @@
             </div>
         </section>
     {% endblock %}
-    <div class="container header-margin">
+    <div class="container">
         {% block content %}
         {% endblock %}
     </div>
