--- a/hobbycoding/static/less/meetup.less
+++ b/hobbycoding/static/less/meetup.less
@@ -1,3 +1,28 @@
+/*-- 헤더 블러 --*/
+.hero {
+  position: relative;
+  width: 100%;
+  padding: 2em 0;
+  overflow: hidden; // Hide overflow to contain the background
+}
+.hero__background {
+  position: absolute;
+  top: -50%;
+  left: 0;
+  width: 200%;
+  // Where the magic happens
+  -webkit-filter: blur(100px);
+  -webkit-transform: translate3d(0, 0, 0);
+}
+.hero__title {
+  position: relative;
+  text-align: center;
+  font-size: 5em;
+  color: white;
+}
+
+
+
 /*-- 댓글 --*/
 .comments-container {
   img {
