--- a/hobbycoding/templates/base.html
+++ b/hobbycoding/templates/base.html
@@ -67,14 +67,24 @@
 </script>
 {% block body %}
     {% block nav-main %}
+        <ul id="account-dropdown" class="dropdown-content">
+            <li><a href="#!">관심 밋업</a></li>
+            <li><a href="#!">내 밋업</a></li>
+            <li class="divider"></li>
+            <li><a href="#!">설정</a></li>
+            <li><a href="#!">도움말</a></li>
+            <li class="divider"></li>
+            <li><a href="/logout">로그아웃</a></li>
+        </ul>
         <nav class="nav-main nav-dark" role="navigation">
-{#            <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">HobbyCoding</a>#}
+            {#            <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">HobbyCoding</a>#}
             <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo"><img src="{% static 'img/logo-dark2.png' %}"/></a>
                 <ul id="nav-top" class="right hide-on-med-and-down">
                     <li><a href="/meetup">meetups</a></li>
                     {% if user.is_authenticated %}
-                        <li class="user-info"><a href="#"><img src="{{ user.avatar.url }}"/>{{ user.email }}</a></li>
-                        <li><a href="/logout">로그아웃</a></li>
+                        <li class="user-info"><a class="dropdown-button" href="#!" data-activates="account-dropdown">
+                            <img src="{{ user.avatar.url }}"/>{{ user.email }}
+                            <i class="material-icons right">arrow_drop_down</i></a></li>
                     {% else %}
                         <li><a href="/signup">회원가입</a></li>
                         <li><a href="/login">로그인</a></li>
@@ -84,7 +94,6 @@
                     <li><a href="/meetup">meetups</a></li>
                     {% if user.is_authenticated %}
                         <li class="user-info"><a href="#"><img src="{{ user.avatar.url }}"/>{{ user.email }}</a></li>
-                        <li><a href="/logout">로그아웃</a></li>
                     {% else %}
                         <li><a href="/signup">회원가입</a></li>
                         <li><a href="/login">로그인</a></li>
@@ -96,6 +105,7 @@
     {% endblock %}
     {% block page-header %}
         <section class="page-header">
+            <img class="blur_background" src="{% block header-image %}{% endblock %}">
             <div class="container">
                 <h2 class="header-title">{% block header-title %}내일 뭐하지?{% endblock %}</h2>
             </div>
