--- a/meetup/templates/meetup_detail.html
+++ b/meetup/templates/meetup_detail.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
+{% block header-image %}{{ meetup.image_url }}{% endblock %}
 {% block header-title %}{{ meetup.title }}{% endblock %}
 {% block content %}
-    hoco 디테일
     <img src='{{ meetup.image_url }}'>
     <div class="meetup-detail">
         <ul>
@@ -32,28 +32,7 @@
             <p>노관심</p>
         {% endfor %}
     </div>
-    <div class="comments-container">
-    </div>
-{#    <div class="comments-container">#}
-{#        <div class="add-comments">#}
-{#            <h3>댓글 달기</h3>#}
-{#            <img src="{{ user.avatar.url }}"/>{{ user.nickname }}#}
-{#            <form method="POST" class="post-form">#}
-{#                {% csrf_token %}#}
-{#                {{ cmtForm.as_p }}#}
-{#                <button type="submit" class="save btn btn-default">Send</button>#}
-{#            </form>#}
-{#        </div>#}
-{#        {% for comment in meetup.comments.all %}#}
-{#            <div class="comment">#}
-{#                <div class="date">{{ comment.created_date }}</div>#}
-{#                <strong>{{ comment.author }}</strong>#}
-{#                <p>{{ comment.text|linebreaks }}</p>#}
-{#            </div>#}
-{#        {% empty %}#}
-{#            <p>댓글이 없습니다</p>#}
-{#        {% endfor %}#}
-{#    </div>#}
+    <div class="comments-container"></div>
 {% endblock %}
 {% block js %}
     <script type="text/javascript" src="//apis.daum.net/maps/maps3.js?apikey=c0560d4dbb9c299defdcf21de8cab125"></script>
