--- a/hobbycoding/templates/base.html
+++ b/hobbycoding/templates/base.html
@@ -76,7 +76,7 @@
             <li class="divider"></li>
             <li><a href="/logout">로그아웃</a></li>
         </ul>
-        <nav class="nav-main nav-dark" role="navigation">
+        <nav class="nav-main nav-dark nav-transparent" role="navigation">
             {#            <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">HobbyCoding</a>#}
             <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo"><img src="{% static 'img/logo-dark2.png' %}"/></a>
                 <ul id="nav-top" class="right hide-on-med-and-down">
