--- a/hobbycoding/static/less/var.less
+++ b/hobbycoding/static/less/var.less
@@ -3,6 +3,7 @@
 @tertiary: #FC5185;
 @light-gray: #F5F5F5;
 @mid-gray: #ABABAB;
+@material-gray: #E0E0E0;
 @warning: #F16060;
 
 @font-primary: #404040;
@@ -17,3 +18,5 @@
 @l-s: ~"(max-width: 599px)";
 
 @transition: all 0.3s ease;
+@background-transition: background 0.3s ease;
+
