--- a/meetup/templates/meetup_detail.html
+++ b/meetup/templates/meetup_detail.html
@@ -45,6 +45,7 @@
             <p>노관심</p>
         {% endfor %}
     </div>
+    <div class="divider"></div>
     <div class="comments-container"></div>
 {% endblock %}
 {% block js %}
