--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -34,7 +34,7 @@
                         </a>
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4"><a href="{% url 'meetup_detail' pk=meetup.pk %}">{{ meetup.title }}</a><i class="material-icons right">more_vert</i></span>
+                        <span class="card-title truncate activator grey-text text-darken-4"><a href="{% url 'meetup_detail' pk=meetup.pk %}">{{ meetup.title }}</a><i class="material-icons right">more_vert</i></span>
                         <p><a href="#">{{ meetup.created_date }}</a></p>
                     </div>
                     <div class="card-reveal">
