--- a/hobbycoding/static/less/meetup.less
+++ b/hobbycoding/static/less/meetup.less
@@ -25,8 +25,57 @@ section.title-section {
 
 /*-- 댓글 --*/
 .comments-container {
+  .comments-header {
+    span.length {
+      margin-left: 0.1rem;
+      vertical-align: super;
+      color: @mid-gray;
+    }
+  }
+  form#comment {
+    .wrapper {
+      display: -webkit-flex;
+      display: flex;
+      img {
+
+      }
+      .textarea {
+        -webkit-flex: 1;
+        flex: 1;
+        padding: 0 1.3rem;
+        textarea {
+          height: 3rem;
+          padding-left: 1rem;
+          border: 1px solid @material-gray;
+          border-radius: 3rem;
+          word-wrap: break-word;
+          resize: none;
+          &:focus {
+            outline: none !important;
+                border: none;
+                box-shadow: 0 0 10px rgba(54, 79, 107, 0.28);
+          }
+        }
+      }
+      input {
+        width: 5.4rem;
+        height: 2.7rem;
+        background: @primary;
+        color: white;
+        border: none;
+        border-radius: 5rem;
+
+        &:hover {
+          background: lighten(@primary, 8%);
+          transition: @background-transition;
+        }
+      }
+    }
+  }
   img {
-    width: 30px;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
   }
   .pagination {
     display: none;
