--- a/hobbycoding/static/less/common.less
+++ b/hobbycoding/static/less/common.less
@@ -17,6 +17,11 @@ h3 {
   font-size: 2rem;
   display: inline-block;
 }
+img.avatar {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+}
 
 //*-- 네비게이션 *--//
 nav.nav-main {
