참여 신청함, 참여함 상태별로 보여주기, 버튼 ajax 보여주기

--- a/hobbycoding/static/less/common.less
+++ b/hobbycoding/static/less/common.less
@@ -22,6 +22,16 @@ img.avatar {
   height: 3rem;
   border-radius: 50%;
 }
+button.big {
+  width: 5.4rem;
+  height: 2.7rem;
+  border: none;
+  border-radius: 5rem;
+  &:hover {
+    background: lighten(@primary, 8%);
+    transition: @background-transition;
+  }
+}
 
 //*-- 네비게이션 *--//
 nav.nav-main {
