--- a/hobbycoding/static/less/var.less
+++ b/hobbycoding/static/less/var.less
@@ -4,7 +4,7 @@
 @light-gray: #F5F5F5;
 @mid-gray: #ABABAB;
 @material-gray: #E0E0E0;
-@warning: #F16060;
+@warning: #F96E73;
 
 @font-primary: #404040;
 @font-secondary: #6f6c66;
