밋업 디스크립션 CSS질

--- a/hobbycoding/static/less/common.less
+++ b/hobbycoding/static/less/common.less
@@ -17,6 +17,11 @@ h3 {
   font-size: 2rem;
   display: inline-block;
 }
+h4 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: @primary;
+}
 img.avatar {
   width: 3rem;
   height: 3rem;
